--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,13 +1,4 @@
 slick-db {
-//  h2 {
-//    driver = "slick.driver.H2Driver$"
-//    db {
-//      connectionPool = disabled
-//      driver = "org.h2.Driver"
-//      url = "jdbc:h2:mem:tsql1;INIT=runscript from 'src/main/resources/create-schema.sql'"
-//    }
-//  }
-
   sqlite {
     connectionPool = disabled
     driver = "org.sqlite.JDBC"
@@ -15,6 +6,18 @@ slick-db {
   }
 }
 
+api-config{
+  title: "DeployLoggerService",
+  description: "Service for store deploy information",
+  termsOfServiceUrl: "",
+  contact: "jpdias@live.com.pt",
+  license: "MIT",
+  licenseUrl: "http://opensource.org/licenses/MIT")
+
+}
+
 logger-service {
+  apiVerion = "0.1",
+  apiConfig = ${api-config},
   persistence = ${slick-db.sqlite}
 }
