minor fixes and add more stuff to config file

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,10 +6,10 @@ slick-db {
   }
 }
 
-api-config{
+api-config {
   title: "DeployLoggerService",
   description: "Service for store deploy information",
-  termsOfServiceUrl: "",
+  termsOfServiceUrl: "http://example.com",
   contact: "jpdias@live.com.pt",
   license: "MIT",
   licenseUrl: "http://opensource.org/licenses/MIT")
@@ -19,5 +19,7 @@ api-config{
 logger-service {
   apiVerion = "0.1",
   apiConfig = ${api-config},
-  persistence = ${slick-db.sqlite}
+  persistence = ${slick-db.sqlite},
+  interface: "0.0.0.0",
+  port: 8000
 }
