minor refactor on reference.conf

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,19 +7,19 @@ slick-db {
 }
 
 api-config {
-  title: "DeployLoggerService",
-  description: "Service for store deploy information",
-  termsOfServiceUrl: "http://example.com",
-  contact: "jpdias@live.com.pt",
-  license: "MIT",
-  licenseUrl: "http://opensource.org/licenses/MIT")
+  title = "DeployLoggerService"
+  description = "Service for store deploy information"
+  termsOfServiceUrl = "http://example.com"
+  contact = "jpdias@live.com.pt"
+  license = "MIT"
+  licenseUrl = "http://opensource.org/licenses/MIT")
 
 }
 
 logger-service {
-  apiVerion = "0.1",
-  apiConfig = ${api-config},
-  persistence = ${slick-db.sqlite},
-  interface: "0.0.0.0",
-  port: 8000
+  apiVerion = "0.1"
+  apiConfig = ${api-config}
+  persistence = ${slick-db.sqlite}
+  interface = "0.0.0.0"
+  port = 8000
 }
