--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ api-config {
   termsOfServiceUrl = "http://example.com"
   contact = "jpdias@live.com.pt"
   license = "MIT"
-  licenseUrl = "http://opensource.org/licenses/MIT")
+  licenseUrl = "http://opensource.org/licenses/MIT"
 }
 
 logger-service {
